--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,11 @@ services:
     container_name: kafka
     ports:
       - '9092:9092'
+    healthcheck:
+      test: ["CMD", "kafka-topics.sh", "--bootstrap-server", "localhost:9092", "--list"]
+      interval: 5s
+      timeout: 5s
+      retries: 20
     environment:
       - KAFKA_ENABLE_KRAFT=yes
       - KAFKA_CFG_NODE_ID=1
@@ -14,6 +19,7 @@ services:
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+      - ALLOW_PLAINTEXT_LISTENER=yes
     volumes:
       - kafka_data:/bitnami/kafka
 
@@ -25,7 +31,8 @@ services:
       - user_node_modules:/app/node_modules
     working_dir: /app
     depends_on:
-      - kafka
+      kafka:
+        condition: service_healthy
     ports:
       - '3001:3001'
     environment:
@@ -39,7 +46,8 @@ services:
       - wallet_node_modules:/app/node_modules
     working_dir: /app
     depends_on:
-      - kafka
+      kafka:
+        condition: service_healthy
     ports:
       - '3002:3002'
     environment:
