--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,7 @@ services:
     image: bitnami/kafka:latest
     container_name: kafka
     ports:
-      - '9092:9092'
-    healthcheck:
-      test: ["CMD", "kafka-topics.sh", "--bootstrap-server", "localhost:9092", "--list"]
-      interval: 5s
-      timeout: 5s
-      retries: 20
+      - "9092:9092"
     environment:
       - KAFKA_ENABLE_KRAFT=yes
       - KAFKA_CFG_NODE_ID=1
@@ -20,51 +15,76 @@ services:
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
       - ALLOW_PLAINTEXT_LISTENER=yes
+    healthcheck:
+      test: ["CMD", "/opt/bitnami/kafka/bin/kafka-topics.sh", "--bootstrap-server", "localhost:9092", "--list"]
+      interval: 5s
+      timeout: 5s
+      retries: 20
+      start_period: 20s
     volumes:
       - kafka_data:/bitnami/kafka
+    restart: unless-stopped
 
   user-service:
     build:
       context: ./user-service
-    volumes:
-      - ./user-service:/app
-      - user_node_modules:/app/node_modules
     working_dir: /app
+    environment:
+      - KAFKA_BROKER=kafka:9092
+      - KAFKA_CLIENT_ID=user-service
     depends_on:
       kafka:
         condition: service_healthy
     ports:
-      - '3001:3001'
-    environment:
-      - KAFKA_BROKER=kafka:9092
+      - "3001:3001"
+    volumes:
+      - ./user-service:/app
+      - user_node_modules:/app/node_modules
+    restart: unless-stopped
 
   wallet-service:
     build:
       context: ./wallet-service
-    volumes:
-      - ./wallet-service:/app
-      - wallet_node_modules:/app/node_modules
     working_dir: /app
+    environment:
+      - KAFKA_BROKER=kafka:9092
+      - KAFKA_CLIENT_ID=wallet-service
     depends_on:
       kafka:
         condition: service_healthy
     ports:
-      - '3002:3002'
-    environment:
-      - KAFKA_BROKER=kafka:9092
+      - "3002:3002"
+    volumes:
+      - ./wallet-service:/app
+      - wallet_node_modules:/app/node_modules
+    restart: unless-stopped
 
   graphql-gateway:
     build:
       context: ./graphql-gateway
-    volumes:
-      - ./graphql-gateway:/app
-      - gateway_node_modules:/app/node_modules
     working_dir: /app
     depends_on:
       - user-service
       - wallet-service
     ports:
-      - '3000:3000'
+      - "3000:3000"
+    volumes:
+      - ./graphql-gateway:/app
+      - gateway_node_modules:/app/node_modules
+    restart: unless-stopped
+
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    depends_on:
+      kafka:
+        condition: service_healthy
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
+    ports:
+      - "8080:8080"
+    restart: unless-stopped
 
 volumes:
   kafka_data:
